# inal

./: CMakeLists.txt  LICENSE  README.md
include/: player.h  ui.h
src/: main.cpp  player.cpp  ui.cpp
